--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <h2>General FAQs About Web Development</h2> <hr>
     <div class="faq">
-        
+
       <div class="faq-item">
         <div class="question">What is Web Development?</div>
         <div class="answer">
